# Identity-Service

./: .cursorrules  .gitignore  Cargo.toml  README.md
.cursor/rules/: chiti-identity-rust.mdc
docs/: architecture.mermaid  service-architecture.md  status.md  tasks.md  technical.md
src/: errors.rs  lib.rs  logging.rs
src/audit/: db.rs
