[package]
name = "identity-model"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Iroh, Willow, Meadowcap Core
iroh = "0.34.1" # Assuming sync features are included or enabled via default features
willow-data-model = "0.2.0"
meadowcap = "0.2.0"
