[package]
name = "identity-model"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Iroh, Willow, Meadowcap Core
iroh = "0.34.1" # Assuming sync features are included or enabled via default features
willow-data-model = "0.2.0"
meadowcap = "0.2.0"
willow_25 = "0.1.0" # Concrete Willow types (Ed25519, Blake3)

# Database
sqlx = { version = "0.8.5", features = [ "runtime-tokio", "postgres", "chrono" ] }

# Utilities
chrono = { version = "0.4", features = ["serde"] } # For timestamps

# Cryptography (for Willow)
# ed25519-dalek was removed as Namespace ID is now a constant hash
# Re-adding ed25519-dalek and adding rand for keypair generation
ed25519-dalek = "2.0.0"
rand = { version = "0.8", features = ["std_rng"] }
